Transistor.cydsn/REBUILD.log
--------------- Rebuild Started: 01/06/2026 11:59:28 Project: Transistor, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\debug.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Impedance.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\ad5940.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Amperometric.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\biosensor_ble.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\ad5941_platform.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_gatt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_eventHandler.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_HAL_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_HAL_PVT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_custom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Disconnect_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Disconnect_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_CS.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_CS_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_EXTI.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_EXTI_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\LowPower_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\LowPower_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_Interrupt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MISO.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MISO_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_SCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_SCLK_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MOSI.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_MOSI_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Advertising_LED.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Advertising_LED_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\DRUG_EN_1.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\DRUG_EN_1_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\STIM_EN_A.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\STIM_EN_A_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_RST.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AD5940_RST_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP1_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP1_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP2_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP2_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP3_EN.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AMP3_EN_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_SPI_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_SPI.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_SPI_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CYBLE_bless_isr.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SPI_1_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyDMA.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Transistor.map"
Deleting file ".\Transistor.cycdx"
Deleting file ".\Transistor.svd"
Deleting file ".\Transistor.rpt"
Deleting file ".\Transistor_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\13740\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p E:\desktop\bu\eda\Transistor\Transistor.cydsn\Transistor.cyprj -d CYBLE-222014-01 -s E:\desktop\bu\eda\Transistor\Transistor.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'DiagnosticsFIFO':
main.c:287:12: warning: unused variable 'fifoCount' [-Wunused-variable]
     uint32 fifoCount = 0;
            ^
main.c: In function 'MeasureTemperature':
main.c:573:20: warning: unused variable 'resistance' [-Wunused-variable]
     float voltage, resistance;
                    ^
main.c:573:11: warning: unused variable 'voltage' [-Wunused-variable]
     float voltage, resistance;
           ^
main.c:572:14: warning: unused variable 'adcCode' [-Wunused-variable]
     uint32_t adcCode;
              ^
main.c: In function 'ReadCurrentFromAD5940':
main.c:632:5: warning: enumeration value 'SENSOR_COUNT' not handled in switch [-Wswitch]
     switch(sensorType)
     ^
main.c: In function 'ReadCurrentFromSourceMeter_Simulated':
main.c:745:34: warning: implicit declaration of function 'rand' [-Wimplicit-function-declaration]
             current_nA = 85.0 + (rand() % 10 - 5);  // 80-90 nA
                                  ^
main.c: In function 'AppCallBack':
main.c:1029:12: warning: unused variable 'i' [-Wunused-variable]
     uint16 i;
            ^
main.c: In function 'main':
main.c:1150:5: warning: implicit declaration of function 'SPI_MISO_SetDriveMode' [-Wimplicit-function-declaration]
     SPI_MISO_SetDriveMode(SPI_MISO_DM_DIG_HIZ);
     ^
main.c:1150:27: error: 'SPI_MISO_DM_DIG_HIZ' undeclared (first use in this function)
     SPI_MISO_SetDriveMode(SPI_MISO_DM_DIG_HIZ);
                           ^
main.c:1150:27: note: each undeclared identifier is reported only once for each function it appears in
main.c: At top level:
main.c:1075:13: warning: 'LowPowerImplementation' defined but not used [-Wunused-function]
 static void LowPowerImplementation(void)
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 01/06/2026 11:59:54 ---------------
